--- a/anaconda-ks.cfg
+++ b/anaconda-ks.cfg
@@ -4,7 +4,7 @@ auth --enableshadow --passalgo=sha512
 # Use CDROM installation media
 cdrom
 # Use graphical install
-graphical
+text
 # Run the Setup Agent on first boot
 firstboot --enable
 ignoredisk --only-use=sda
