--- a/anaconda-ks.cfg
+++ b/anaconda-ks.cfg
@@ -31,9 +31,9 @@ bootloader --append=" crashkernel=auto" --location=mbr --boot-drive=sda
 # Partition clearing information
 clearpart --none --initlabel
 # Disk partitioning information
-part / --fstype="xfs" --size=3814
-part swap --fstype="swap" --size=953
-part /var --fstype="xfs" --size=953
+part / --fstype="xfs" --ondisk=sda --size=3814
+part swap --fstype="swap" --ondisk=sda --size=953
+part /var --fstype="xfs" --ondisk=sda --size=953
 
 %packages
 @^minimal
